--- a/ClientSide/src/app/edit-board/edit-board.component.html
+++ b/ClientSide/src/app/edit-board/edit-board.component.html
@@ -40,8 +40,9 @@
         </div>
         <div [ngClass]="{'removed': !historyTable}" id="history">
             <h2>History List</h2>
+            <h6>*right click: remove sequence<br>*left click: remove current</h6>
             <ul>
-                <li *ngFor="let shape of updates; let i=index"><a style="cursor: pointer;" (click)="hideUpdates(i)">{{ shape.shapeName }}</a></li>
+                <li *ngFor="let shape of updates; let i=index"><a style="cursor: pointer;" (mouseenter) ="markShapes(i)" (mouseleave)="unmarkShapes(i)" (click)="hideUpdate(i)" (contextmenu)="hideUpdates(i)">{{ shape.shapeName }}</a></li>
             </ul>
         </div>
         
