--- a/ClientSide/src/app/board-object/board-object.component.html
+++ b/ClientSide/src/app/board-object/board-object.component.html
@@ -25,7 +25,7 @@
                 <a (click)="shapeChanged('circle')">circle</a>
                 <a (click)="shapeChanged('rect')">rect</a>
                 <a (click)="shapeChanged('line')">line</a>
-                <a (click)="shapeChanged('freeHand')">freehand</a>
+                <a (click)="shapeChanged('freeHand')">free</a>
             </div>
         </div>
         <div class="dropdown">
@@ -84,7 +84,6 @@
         <a style="float: right;" (click)="clear()">Clear</a>
         <a class="checkbox" [ngClass]="{'active': users}" (click)="usersChanged()">Users</a>
         <a class="checkbox" [ngClass]="{'active': history}" (click)="historyChanged()">History</a>
-
     </div>
 </div>
 <canvas (contextmenu)="onRightClick($event)" (mousedown)="onCanvas($event)" #canvas></canvas>
