--- a/ClientSide/src/app/share-board/share-board.component.html
+++ b/ClientSide/src/app/share-board/share-board.component.html
@@ -21,6 +21,8 @@
               <span class="ion-md-paper form-control-icon"></span>
               <div *ngIf="msg.touched && msg.invalid">Required</div>
             </div>
+
+            <div [ngClass]="{'hide-error': !error}" style="margin: 5px;">error</div>
   
             <button type="submit" class="btn btn-block btn-success" [disabled]="!shareBoardForm.valid">Share!</button>
   
