--- a/ClientSide/src/app/edit-board/edit-board.component.html
+++ b/ClientSide/src/app/edit-board/edit-board.component.html
@@ -33,6 +33,7 @@
                 (back)="goBack()"
                 (sendUpdate)="sendUpdate()"
                 (onClear)="onCanvasClear()"
+                (onSave)="saveCanvas()"
                 [(updates)]="updates"
                 ></app-board-object>
         </div>
