--- a/ClientSide/src/app/board/board.component.html
+++ b/ClientSide/src/app/board/board.component.html
@@ -1,5 +1,5 @@
 <div class="board-block-content">
-    <h3>{{ board.name }}</h3>
+    <h3>{{ board.name }}</h3><a [ngClass]="{'invisible':notOwner}" (click)="openRename()" class="edit-icon"><i class="ion-md-create"></i></a>
     <p class="board-sub">owner: {{ owner }}, last opened: {{ board.last_opened | date:'dd.MM.yyyy' }}</p>
     <div class="board-image">
         <img src="../../assets/images/gallery-images/gallery-image-{{ board.id%6+1 }}.jpg" alt="{{ board.name }}">
