--- a/ClientSide/src/styles.css
+++ b/ClientSide/src/styles.css
@@ -2654,3 +2654,5 @@ h6 {
 #landing-footer i {
     color:#999;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
