--- a/ClientSide/src/app/rename-board/rename-board.component.html
+++ b/ClientSide/src/app/rename-board/rename-board.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Rename board {{board.name}}</h1>
-<!-- <div mat-dialog-content>
+<div mat-dialog-content>
   <p>What's your favorite animal?</p>
   <mat-form-field>
     <mat-label>Favorite Animal</mat-label>
@@ -9,4 +9,4 @@
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
   <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
-</div> -->
+</div>
