--- a/ClientSide/src/app/user-dashboard/user-dashboard/user-dashboard.component.html
+++ b/ClientSide/src/app/user-dashboard/user-dashboard/user-dashboard.component.html
@@ -24,6 +24,7 @@
                     </div>
                 </div>
             </div>
+            <a (click)="delete()" class="button">Delete Account</a>
         </div>
     </div>
 </section>
