--- a/ClientSide/src/app/share-board/share-board.component.css
+++ b/ClientSide/src/app/share-board/share-board.component.css
@@ -124,6 +124,10 @@ button[disabled]{
   cursor: default;
 }
 
+input[type=checkbox] {
+    height: auto;
+}
+
 .hide-error {
     display: none;
 }
