--- a/ClientSide/src/app/share-board/share-board.component.html
+++ b/ClientSide/src/app/share-board/share-board.component.html
@@ -16,10 +16,16 @@
                     <div *ngIf="!email.errors.required">Invalid Email</div>
                 </div>
             </div>
+
             <div class="form-group">
               <input type="text" class="form-control input-lg" name="msg" placeholder="Message...." formControlName="msg">
               <span class="ion-md-paper form-control-icon"></span>
               <div *ngIf="msg.touched && msg.invalid">Required</div>
+            </div>
+
+            <div class="form-group">
+              <input (change)="allowedChanged()" type="checkbox" name="permissions" checked>
+              <label for="permissions"> Allowed to draw</label><br>
             </div>
 
             <div [ngClass]="{'hide-error': !err}" style="margin: 5px;">{{error}}</div>
