--- a/ClientSide/src/app/user-dashboard/user-dashboard/user-dashboard.component.css
+++ b/ClientSide/src/app/user-dashboard/user-dashboard/user-dashboard.component.css
@@ -1,9 +1,23 @@
+.img {
+  cursor: pointer;
+  display: block;
+  -webkit-transition: all 0.5s linear;
+     -moz-transition: all 0.5s linear;
+      -ms-transition: all 0.5s linear;
+       -o-transition: all 0.5s linear;
+          transition: all 0.5s linear;
+}
+
+.img:hover {
+  opacity: 0.7;
+}
+
 .edit-icon {
-    border: 1px solid black;
-    border-radius: 15px;
-    padding: 5px;
-    margin: 0px;
-    position: absolute;
-    top: 40px;
-    right: 10px;
-  }
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 5px;
+  margin: 0px;
+  position: absolute;
+  top: 40px;
+  right: 10px;
+}
