--- a/ClientSide/src/app/board/board.component.css
+++ b/ClientSide/src/app/board/board.component.css
@@ -80,3 +80,17 @@
 .invisible {
   display: none;
 }
+
+.img {
+  cursor: pointer;
+  display: block;
+  -webkit-transition: all 0.5s linear;
+     -moz-transition: all 0.5s linear;
+      -ms-transition: all 0.5s linear;
+       -o-transition: all 0.5s linear;
+          transition: all 0.5s linear;
+}
+
+.img:hover {
+  opacity: 0.7;
+}
