--- a/ClientSide/src/app/user-dashboard/user-profile-icon/user-profile-icon.component.html
+++ b/ClientSide/src/app/user-dashboard/user-profile-icon/user-profile-icon.component.html
@@ -1,4 +1,4 @@
 <a class="testimonial classic" routerLink="/dashboard">
     <img [src]="profileImage" alt="User" 
-    style="max-height: 60px; vertical-align: middle; margin-top: 18px;"/>
+    style="max-height: 60px; vertical-align: middle; margin-top: 18px;border-radius: 50%;"/>
 </a>
